# full_social_tourguide

./: Project_Contract1.docx  README.md  client_demo_timeline.md  docks.db  guide.md  guide_locomotion.md  tours.db  waypoint_info.txt  waypoint_info_loader_helper.py
src/Pepper_HRI/: HRI_coordinator.py  bootup.launch.py  gesture_manager.launch.py  package.xml  pepper_real.launch.py  pepper_sim.launch.py  setup.cfg  setup.py
src/Pepper_HRI/audio/: audio_processor_node.py
src/Pepper_HRI/audio/audio_processor_option2/: commands_to_run.txt  manual_audio_processor_node
src/Pepper_HRI/config/: pepper_real.yaml
src/Pepper_HRI/gestures/: default_pose.py  explain_gesture.py  gesture_manager.py  gesture_manager_sim.py  listening_gesture.py  move_pepper.launch.py  nodding_gesture.py  wave_hello_gesture.py
src/Pepper_HRI/tablet_assets/: builder.py  current_state.json  exhibition_commands.json  index.html  layout.html  menu.html  test_write.html
src/Pepper_HRI/tablet_assets/exhibition_explanation/: LED_crystal.txt  LED_crystal_exhibit_explanation.txt  articulated_lamp.txt  articulated_lamp_exhibit_explanation.txt  combination_vault.txt  combination_vault_exhibit_explanation.txt  conclusion.txt  crane.txt  crane_exhibit_explanation.txt  glowing_double_pendulum.txt  glowing_double_pendulum_exhibit_explanation.txt  walking_robot.txt  walking_robot_exhibit_explanation.txt
src/docking/: package.xml  setup.py
src/docking/docking/: dock_listener.py
src/pepper_llm/: package.xml  setup.cfg  setup.py
src/pepper_llm/pepper_llm/: pepper_listen.py  pepper_talk_sub.py
src/qr_code_follower/: package.xml  setup.cfg  setup.py
src/qr_code_follower/config/: qr_follower.yaml
src/qr_code_follower/launch/: qr_follower.launch.py
src/qr_code_follower/qr_code_follower/: qr_follower_node.py
src/robot_tour/: CMakeLists.txt
src/robot_tour/plugins/: talk_at_waypoint.cpp
src/robot_tour/src/: subtour.cpp  tour_guide.cpp
src/social_robot_interfaces/: package.xml
src/speech_locomotion_interface/: package.xml
src/tour_manager/: package.xml  setup.py
src/tour_manager/config/: tour_manager_params.yaml
src/tour_manager/launch/: locomotion_test.launch.py  pepper_llm_only.launch.py  pepper_locomotion_llm.launch.py  tour_manager_launch.py
src/tour_manager/tour_manager/: tour_manager_service.py
(+7 files in other folders)
