<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tour_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a.liver.f.let.cha@gmail.com">tom</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>social_robot_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>docking</exec_depend>
  <exec_depend>robot_tour</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>pepper_hri</exec_depend>
  <exec_depend>speech_locomotion_interface</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot_llm_control</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
